[metadata]
name = tpp_guille_santi_commons
version = 0.0.3
author = Santiago Gandolfo
author_email = sgandolfo@fi.uba.ar
description = Comons package for our TPP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpp-guille-santi/commons
project_urls =
    Bug Tracker = https://github.com/tpp-guille-santi/commons/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
